# Assignment2

./: .gitignore  PDF Extraction API Evaluation Template_Team4.docx  README.md  docker-compose.yaml
Airflow/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
Airflow/credentials/: coastal-cascade-437522-n2-fb3d3fce18c5.json
Airflow/dags/: azure_pipeline.py  gcp_ingestion_dag.py  pipeline2.py  pipieline1.py  pypdf_pipeline.py
Diagrams/: Diagram_Assignment2.ipynb  diagram_assignment2.py
data_ingestion/: data.py
fastapi/: Dockerfile  db_utils.py  delete.py  main_fastapi.py  pyproject.toml
fastapi/credentials/: coastal-cascade-437522-n2-fb3d3fce18c5.json
streamlit/: Dockerfile  gcp_utils.py  index.py  pyproject.toml  question_selection.py  submit_page.py  summary_page.py
