[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["tanviinchanalkar99 <144856652+tanviinchanalkar99@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-storage = "^2.18.2"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
