[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.0.0"
python-dotenv = "^1.0.1"
streamlit-option-menu = "^0.3.13"
openai = "^1.47.0"
requests = "^2.32.3"
pymssql = "^2.3.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
datasets = "^3.0.0"
plotly = "^5.24.1"
streamlit-plotly-events = "^0.0.6"
google-cloud-storage = "^2.18.2"
mysql-connector-python = "^9.0.0"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.35"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
